# django-training

./: README.md  conftest.py  pyproject.toml
albums/: admin.py  filters.py  models.py  models_validators.py  serilaizer.py  tasks.py  tests.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_alter_album_table.py  0003_album_is_approved.py  0004_remove_album_creation_datetime_album_created_and_more.py  0005_song.py  0006_delete_song.py  0007_song.py  0008_delete_song.py  0009_song.py  0010_remove_song_thumbnail_alter_song_audio_file.py  0011_alter_song_name.py
albums/tests/: test_serializers.py  test_views.py
artists/: admin.py  models.py  serilaizer.py  tests.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_artist_user.py  0002_rename_social_link_field_artist_social_link.py
artists/tests/: test_views.py
authentication/: permissions.py  serializers.py  urls.py  views.py
authentication/tests/: test_views.py
musicplatform/: RESULT.md  celery.py  decorators.py  permissions.py  settings.py  urls.py
my_auth/: urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_views.py
